1. 解决celllistview位置的问题 2. 修改category文件名 3. 解决catalogview和imageview两边颜色不一致问题 4. catalogView中的分类加上缩写

--- a/morph/cellgroupbox.ui
+++ b/morph/cellgroupbox.ui
@@ -207,7 +207,7 @@ background-color: rgb(61, 62, 62);
   <customwidget>
    <class>CellListView</class>
    <extends>QListView</extends>
-   <header>celllistview.h</header>
+   <header location="global">morph/celllistview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
