--- a/frame/cellcounter.ui
+++ b/frame/cellcounter.ui
@@ -140,7 +140,7 @@ QListWidget::item:selected {
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../resource.qrc">
+            <iconset resource="resource.qrc">
              <normaloff>:/icons/database.png</normaloff>:/icons/database.png</iconset>
            </property>
            <property name="flags">
@@ -152,7 +152,7 @@ QListWidget::item:selected {
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../resource.qrc">
+            <iconset resource="resource.qrc">
              <normaloff>:/icons/information.png</normaloff>:/icons/information.png</iconset>
            </property>
           </item>
@@ -169,6 +169,9 @@ QListWidget::item:selected {
           <property name="styleSheet">
            <string notr="true">background-color: rgb(46, 47, 48);
 border: none;</string>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::HLine</enum>
           </property>
           <property name="currentIndex">
            <number>1</number>
@@ -240,7 +243,7 @@ QPushButton:pressed {
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resource.qrc">
+                  <iconset resource="resource.qrc">
                    <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
                  </property>
                  <property name="iconSize">
@@ -266,7 +269,7 @@ QPushButton:pressed {
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resource.qrc">
+                  <iconset resource="resource.qrc">
                    <normaloff>:/icons/edit.png</normaloff>:/icons/edit.png</iconset>
                  </property>
                  <property name="iconSize">
@@ -292,7 +295,7 @@ QPushButton:pressed {
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resource.qrc">
+                  <iconset resource="resource.qrc">
                    <normaloff>:/icons/delete.png</normaloff>:/icons/delete.png</iconset>
                  </property>
                  <property name="iconSize">
@@ -342,8 +345,92 @@ QPushButton:pressed {
           </widget>
           <widget class="QWidget" name="page_2">
            <property name="styleSheet">
-            <string notr="true">background-image: url(:/images/about.png);</string>
+            <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
+           <widget class="QLabel" name="titleLabel">
+            <property name="geometry">
+             <rect>
+              <x>130</x>
+              <y>120</y>
+              <width>541</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>微软雅黑</family>
+              <pointsize>18</pointsize>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(0, 0, 0);</string>
+            </property>
+            <property name="text">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;关于 CELLCOUNTER&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="detaiLabel">
+            <property name="geometry">
+             <rect>
+              <x>190</x>
+              <y>200</y>
+              <width>611</width>
+              <height>151</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>微软雅黑</family>
+              <pointsize>14</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(0, 0, 0);</string>
+            </property>
+            <property name="text">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;软件名称&lt;/span&gt;: 深析智能细胞形态显微镜图像扫描分析软件&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;软件型号&lt;/span&gt;: CellCounter&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;版本信息&lt;/span&gt;:&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;发布版本&lt;/span&gt;: V%1.%2.%3.%4&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;软件说明&lt;/span&gt;: 本软件为DCS-1000细胞医学图像分析系统配套专用软件&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="iconLabel">
+            <property name="geometry">
+             <rect>
+              <x>640</x>
+              <y>380</y>
+              <width>161</width>
+              <height>151</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="resource.qrc">:/images/deepcyto.jpg</pixmap>
+            </property>
+           </widget>
+           <widget class="QLabel" name="copyrightLabel">
+            <property name="geometry">
+             <rect>
+              <x>190</x>
+              <y>380</y>
+              <width>431</width>
+              <height>141</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>微软雅黑</family>
+              <pointsize>12</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(0, 0, 0);</string>
+            </property>
+            <property name="text">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Copyright 2018-2020 Deepcyto. All Rights Reserved.&lt;/p&gt;&lt;p&gt;深圳深析智能有限公司版权所有&lt;/p&gt;&lt;p&gt;www.deepcyto.cn&lt;/p&gt;&lt;p&gt;了解更多信息, 请参阅我们的主页&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+           </widget>
           </widget>
          </widget>
         </item>
@@ -355,7 +442,7 @@ QPushButton:pressed {
   </widget>
   <action name="actionRemove">
    <property name="icon">
-    <iconset resource="../resource.qrc">
+    <iconset resource="resource.qrc">
      <normaloff>:/icons/delete_2.png</normaloff>:/icons/delete_2.png</iconset>
    </property>
    <property name="text">
@@ -364,7 +451,7 @@ QPushButton:pressed {
   </action>
   <action name="actionEdit">
    <property name="icon">
-    <iconset resource="../resource.qrc">
+    <iconset resource="resource.qrc">
      <normaloff>:/icons/edit_2.png</normaloff>:/icons/edit_2.png</iconset>
    </property>
    <property name="text">
@@ -373,7 +460,7 @@ QPushButton:pressed {
   </action>
   <action name="actionAdd">
    <property name="icon">
-    <iconset resource="../resource.qrc">
+    <iconset resource="resource.qrc">
      <normaloff>:/icons/add_2.png</normaloff>:/icons/add_2.png</iconset>
    </property>
    <property name="text">
@@ -391,7 +478,7 @@ QPushButton:pressed {
   <tabstop>listWidget</tabstop>
  </tabstops>
  <resources>
-  <include location="../resource.qrc"/>
+  <include location="resource.qrc"/>
  </resources>
  <connections/>
 </ui>
